<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_alignParentTop="true"
    android:gravity="top"
    android:background="#202244">

    <TextView
        android:id="@+id/QuestionC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#00F9FF"
        android:padding="10dp"
        android:text="@string/Activity_C"
        android:textColor="#000000"
        android:textSize="20dp" >
        <requestFocus />
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:gravity="center|top"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Cstart_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Start_A" />

        <Button
            android:id="@+id/Cstart_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Start_B" />

        <Button
            android:id="@+id/Cfinish_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Finish_C" />

        <Button
            android:id="@+id/CDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Dialog" />
    </LinearLayout>

    <TextView
        android:id="@+id/CEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Life"
        android:textSize="20dp" >
    </TextView>

    <TextView
        android:id="@+id/Clife1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:background="#FFFFFF"
        android:maxLines="8"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:singleLine="false" >
    </TextView>

    <TextView
        android:id="@+id/CStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Status"
        android:textSize="20dp" >
    </TextView>

    <TextView
        android:id="@+id/Cstatus1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:maxLines="8"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:singleLine="false" >
    </TextView>

    

</LinearLayout>
