<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="#0099CC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00F9FF"
            android:padding="10dp"
            android:text="@string/Activity_A"
            android:textColor="#000000"
            android:textSize="20dp" >

            <requestFocus />
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center|top"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/start_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Start_B" />

            <Button
                android:id="@+id/start_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Start_C" />

            <Button
                android:id="@+id/finish_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Finish_A" />

            <Button
                android:id="@+id/Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Dialog" />
        </LinearLayout>

        <TextView
            android:id="@+id/EditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Life"
            android:textSize="20dp" >
        </TextView>

        <TextView
            android:id="@+id/life1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:background="#FFFFFF"
            android:maxLines="8"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:singleLine="false" >
        </TextView>

        <TextView
            android:id="@+id/Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Status"
            android:textSize="20dp" >
        </TextView>

        <TextView
            android:id="@+id/status1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:maxLines="8"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:singleLine="false" >
        </TextView>
    </LinearLayout>

</RelativeLayout>
